--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.1",
     "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
