--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.44",
     "axios": "^0.19.0",
     "i18next": "^17.0.13",
     "i18next-browser-languagedetector": "^3.0.3",
@@ -22,6 +25,15 @@
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-saga": "^1.0.5"
+  },
+  "devDependencies": {
+    "babel-eslint": "10.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
