--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
+    "apisauce": "^1.1.1",
     "axios": "^0.19.0",
     "i18next": "^17.0.13",
     "i18next-browser-languagedetector": "^3.0.3",
