--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^17.0.13",
     "i18next-browser-languagedetector": "^3.0.3",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-i18next": "^10.12.2",
